public/styles.css
* {
	box-sizing: border-box;
	font-family: 'Source Sans Pro', sans-serif;
	margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  vertical-align: baseline;
}

.title {
	padding-top: 5%;
}


body {
	background: radial-gradient(circle at 100%, #21AAFF, #888888);
}

p, h1, h2 {
	text-align: center;
}

form {
	width: 60%;
	margin: 2% auto 2% auto;
	padding-top: 1%;
	padding-bottom: 1%;
	text-align: center;
	background-color: #EBEDEF;
	border: 3px solid grey;
	border-radius: 8px;
}

section {
	text-align: center;
	margin: 2% auto;
}

nav {
	margin-top: 0;
	display: block;
	x-index: 0;
	y-index: 0;
	position: fixed;
	width: 100%;
}

ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
	overflow: hidden;
	background: rgba(33, 170, 255, 0.5);
}

input[type='text'] {
	padding: 0.2%;
}

label {
	margin-top: 3%;
}

.nav-link {
	float: left;
}

.nav-link a {
	display: block;
	color: white;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;

}

.nav-link a:hover {
	background-color: black;
}

a {
	color: black;
	text-decoration: none;
}

.delete-form, .search-form, .update-form, .submit-form {
	display: inline-block;
	width: 45%;
}

.get-div {
	text-align: center;
	margin: auto;
	height: 50px;
}

.get-btn {
	margin: auto;
	font-weight: bold;
	font-size: 1.5em;
	width: 45%;
	height: 100%;
	background-color: #BABBBC;
	border: 2px solid black;
	border-radius: 2px;
}

.get-btn:hover, .search-btn:hover, .submit-btn:hover, .delete-btn:hover, .update-btn:hover {
	background-color: black;
	color: white;
}

.search-btn:active {
	background-color: #2CBD4A;
}

.submit-btn:active {
	background-color: #273FDD;
}

.get-btn:active {
	background-color: green;
}

.delete-btn:active {
	background-color: #F92F2F;
}

.submit-form > label, .update-form > label {
	display: block;
	margin: 1% auto 1% auto;
	width: 80%;
	text-align: left;
}

.search-txt, .delete-txt, .meme-name, .meme-type, .meme-origin {
	margin-left: 3%;
}

.submit-label > input {
	float: right;
}

.search-btn, .submit-btn, .delete-btn, .update-btn {
	text-align: center;
	display: block;
	width: 10%;
	height: 5%;
	margin-top: 3%;
	margin-left: auto;
	margin-right: auto;
	padding: auto;
	border: 0.5px solid black;
	border-radius: 2px;
}

.get-separator {
	margin-top: 0.5%;
}

.results-list {
	background: radial-gradient(circle at 100%, #21AAFF, #888888);
}

.result-li {
	width: 30%;
	background-color: rgba(168, 168, 168, 0.5);
	background-size: 
	margin-top: 6%;
	margin-bottom: 6%;
	margin-left: auto;
	margin-right: auto;
	border-radius: 8px;
}

.results {
	margin: 2% auto;
}

.example-link {
	text-decoration: underline;
}

.hidden {
	display: none;
}

@media only screen and (max-width: 800px) {

	.result-li {
		width: 70%;
	}

	.get-btn {
		width: 50%;
	}

	form {
		width: 100%;
		margin: 2% auto 2% auto;
		padding-top: 1%;
		padding-bottom: 1%;
		text-align: center;
		background-color: #EBEDEF;
		border: 3px solid grey;
		border-radius: 8px;
	}

	.delete-form, .search-form, .update-form, .submit-form {
		display: inline-block;
		width: 70%;
	}

	form > p {
		margin-top: 5%;
		margin-bottom: 3%;
	}

	.submit-form > label, .update-form > label {
		width: 70%;
		margin: 2% auto;

	}

	.submit-form > input[type='text'], .update-form > input[type='text'] {
		width: 10px;
		margin: 0;
	}

	.search-btn, .submit-btn, .delete-btn, .update-btn {
		text-align: center;
		display: block;
		width: 25%;
		height: 10%;
		margin-top: 3%;
		margin-left: auto;
		margin-right: auto;
		padding: auto;
		border: 0.5px solid black;
		border-radius: 2px;
	}

	.nav-link, .nav-link a{
		width: 20%;
	}

	.nav-link a {
		padding: 10px 12px;
	}

	.title {
		padding-top: 10%;
	}
}

@media only screen and (max-width: 400px) {

	.result-li {
		width: 90%;
	}

	.get-btn {
		font-size: 1.2em;
		width: 85%;
	}

	form {
		width: 100%;
		margin: 2% auto 2% auto;
		padding-top: 1%;
		padding-bottom: 1%;
		text-align: center;
		background-color: #EBEDEF;
		border: 3px solid grey;
		border-radius: 8px;
	}

	.delete-form, .search-form, .update-form, .submit-form {
		display: inline-block;
		width: 90%;
	}

	form > p {
		margin-top: 5%;
		margin-bottom: 3%;
	}

	.submit-form > label, .update-form > label {
		width: 95%;
		margin: 2% auto;

	}

	.submit-form > input[type='text'], .update-form > input[type='text'] {
		width: 10px;
		margin: 0;
	}

	.search-btn, .submit-btn, .delete-btn, .update-btn {
		text-align: center;
		display: block;
		width: 25%;
		height: 10%;
		margin-top: 3%;
		margin-left: auto;
		margin-right: auto;
		padding: auto;
		border: 0.5px solid black;
		border-radius: 2px;
	}

	.nav-link, .nav-link a{
		width: 20%;
	}

	.nav-link a {
		padding: 10px 12px;
	}

	.title {
		padding-top: 30%;
	}
}

